--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@google/genai": "^1.9.0",
     "@hookform/resolvers": "^4.1.0",
     "@modelcontextprotocol/sdk": "^1.15.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
